# voice-separator-demucs

./: .dockerignore  .gitignore  DESKTOP_QUICKSTART.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  README_PT-BR.md  desktop_app.py  docker-compose.yml  main.py  requirements.txt  setup.sh  start_desktop_dev.sh
.github/: copilot-instructions.md
.huggingface/: README.md
desktop/: .gitignore  README.md  package.json  tauri.conf.json
desktop/src-tauri/: .taurignore  Cargo.toml  desktop_app  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: main.rs
electron/: README_ELECTRON.md  main.js  package-lock.json  package.json
electron/renderer/: index.html  renderer.js  style.css
src/: __init__.py
src/api/: __init__.py  routes.py
src/core/: __init__.py  separator.py  youtube_downloader.py
static/css/: style.css
static/output/: .gitkeep
templates/: index.html
